@@ -1,5 +1,16 @@
 2001-06-30 Kevin Vandersloot <kfv101@psu.edu>
 
+	*proctable.c (insert_info_to_tree): check to see if parent has
+	same name. If so assume the child is a thread and don't expand
+	the row.
+
+	*proctable.c: renamed get_parent_node to get_parent and return
+	parent info in order to check the name
+
+	* some other code cleanups
+
+2001-06-30 Kevin Vandersloot <kfv101@psu.edu>
+
 	*interface.c (update_sensitivity): more movement of code
 	to interface.c.
 
